<resources>
    <string name="sign_up">회원가입</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="passwordCheck">비밀번호 확인</string>
    <string name="login">로그인</string>
    <string name="logout">로그아웃</string>
    <string name="mycloset">내옷장</string>
    <string name="lookbook">룩북</string>
    <string name="ourcloset">공유옷장</string>
    <string name="search">검색</string>
    <string name="address">주소찾기</string>
    <string name="request_title">요청 보낸 메시지</string>
    <string name="response_title">요청 받은 메시지</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
</resources>
